--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,11 +1,13 @@
 .header {
     width: 100%;
-    background: #24292e;
+    background: white;
     position: fixed;
     top: 0;
     z-index: 99;
     height: 64px;
     display: flex;
+    left: 0;
+    box-shadow: 0 1px 0 0 rgba(0,0,0,.12);
 }
 
 .flex {
