--- a/src/components/Transaction/TransactionItem.css
+++ b/src/components/Transaction/TransactionItem.css
@@ -12,3 +12,12 @@
     line-height: 14px!important;
     color: rgba(0,0,0,.54)!important;
 }
+
+.list-item:hover {
+    background-color: rgb(224, 243, 228)!important;
+}
+
+.MuiList-padding {
+    padding-top: 0px!important; 
+    padding-bottom: 0px!important; 
+}
