--- a/src/components/Paper/PaperCard.css
+++ b/src/components/Paper/PaperCard.css
@@ -3,7 +3,7 @@
     background: #fff;
     border-radius: 4px;
     margin: 10px auto;
-    height: 400px;
+    min-height: 400px;
     max-width: 700px;
     margin-top: 84px;
 }
