--- a/src/components/Transaction/TransactionItem.css
+++ b/src/components/Transaction/TransactionItem.css
@@ -21,3 +21,8 @@
     padding-top: 0px!important; 
     padding-bottom: 0px!important; 
 }
+
+.inbound {
+    font-weight: 400!important;
+    color: red!important;
+}
