--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -9,6 +9,7 @@
     left: 0;
     box-shadow: 0 1px 0 0 rgba(0,0,0,.12);
     justify-content: center;
+    border-top: 1px solid lightgray
 }
 
 .flex {
