--- a/src/components/Transaction/TransactionHeader/TransactionHeader.css
+++ b/src/components/Transaction/TransactionHeader/TransactionHeader.css
@@ -10,4 +10,18 @@
     font-weight: 400;
     width: 48px;
     margin-right: 8px;
+    font-family: Roboto,sans-serif;
+}
+
+.list {
+    width: 100%;
+    font-family: Roboto,sans-serif;
+    border-bottom: 2px solid rgba(0,0,0,.12);
+    padding: 0;
+    list-style: none;
+    margin: 0;
+}
+
+.card-transction-day {
+    border-top: 11px solid #e9ebee;
 }
