--- a/src/components/Transaction/TransactionItem.css
+++ b/src/components/Transaction/TransactionItem.css
@@ -12,11 +12,6 @@
     line-height: 14px!important;
     color: rgba(0,0,0,.54)!important;
 }
-
-.list-item:hover {
-    background-color: rgb(224, 243, 228)!important;
-}
-
 .MuiList-padding {
     padding-top: 0px!important; 
     padding-bottom: 0px!important; 
@@ -25,4 +20,8 @@
 .inbound {
     font-weight: 400!important;
     color: red!important;
+}
+
+.MuiListItem-container{
+    cursor: pointer;
 }
